changed invision btn color to grey and fixed spacing issues for EM and MR

--- a/style/blocbox.css
+++ b/style/blocbox.css
@@ -134,10 +134,10 @@ a.anchor{
   font-style:italic;
   font-weight: 600i;
   font-size:18px;
-  color: #FFF;
+  color: #000;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #000;
-  border-color: #000;
+  background-color: #DCDCDC;
+  border-color: #DCDCDC;
   border-radius: 0px 0px;
   box-shadow:0px 1px 1px rgba(75,75,75,0.5);
   width: 160px;
