--- a/style/expertme.css
+++ b/style/expertme.css
@@ -135,10 +135,10 @@ a.anchor{
   font-style:italic;
   font-weight: 700i;
   font-size:18px;
-  color: #FFF;
+  color: #000;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #000;
-  border-color: #000;
+  background-color: #DCDCDC;
+  border-color: #DCDCDC;
   border-radius: 0px 0px;
   box-shadow:0px 2px 2px rgba(75,75,75,0.5);
   width: 160px;
@@ -224,6 +224,7 @@ h6 {
   border-color: #000;
   border-radius: 0px 0px;
   width: 200px;
+  margin-top:10px;
   margin-bottom: 40px;
   box-shadow:0px 3px 7px rgba(75,75,75,0.3);
 }
@@ -326,6 +327,7 @@ h6 {
   .btn:hover,
   .btn:focus {
     width: 350px;
+    margin-top:0px;
     margin-bottom: 40px;
   }
   #site-footer .footer a:nth-child(1) {
